# fdt_diag

./: .gitignore  Makefile  Makefile.in  README.md  config.h.in  configure  configure.ac  fdt2.c  test.sh
src/: Makefile.am  Makefile.in  fdt.c  unique_printf.c  unique_printf.h
